# multimodal-agent-gateway

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: video-vlm-agents.md
examples/: fall_detection.py  multi_model_analysis.py  security_monitoring.py
scripts/: run.sh  test.sh
src/multimodal_agent_gateway/: cli.py  config.py  providers.py
src/multimodal_agent_gateway/workflows/: monitoring.py
src/vlm_agent_gateway/: __init__.py  __main__.py  cli.py  config.py  image.py  models.py  providers.py  video.py
src/vlm_agent_gateway/tools/: __init__.py  builtin.py  parsing.py
src/vlm_agent_gateway/workflows/: __init__.py  conditional.py  iterative.py  moa.py  monitoring.py  parallel.py  react.py  sequential.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py
