[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlm-agent-gateway"
dynamic = ["version"]
description = "Multi-provider VLM inference with sequential, parallel, conditional, iterative, MoA, and ReAct workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["vlm", "vision", "multimodal", "agent", "workflow", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
video = [
    "opencv-python>=4.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "vlm-agent-gateway[video,dev]",
]

[project.scripts]
vlm-agent-gateway = "vlm_agent_gateway.cli:main"

[project.urls]
Repository = "https://github.com/francescoXeo/vlm-agent-gateway"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/VERSION",
]
exclude = [
    "/tests",
    "/examples",
    "/docs",
    "/vlm-inference-client",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vlm_agent_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
packages = ["vlm_agent_gateway"]
mypy_path = "src"
